--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Calculator</title>
 </head>
 <body>
     <main class="calculator">
+
+        <div id ="screen"></div>
 
         <div id = "buttons">
         <button id ="btn-plus">+</button>
@@ -16,8 +19,16 @@
         <button id ="btn-equals">=</button>
         <br>
 
-        <button id ="btn-one">1</button>
-        <button id ="btn-two">2</button>
+        <button class="num-btn" data-num="0">0</button>
+        <button class="num-btn" data-num="1">1</button>
+        <button class="num-btn" data-num="2">2</button>
+        <button class="num-btn" data-num="3">3</button>
+        <button class="num-btn" data-num="4">4</button>
+        <button class="num-btn" data-num="5">5</button>
+        <button class="num-btn" data-num="6">6</button>
+        <button class="num-btn" data-num="7">7</button>
+        <button class="num-btn" data-num="8">8</button>
+        <button class="num-btn" data-num="9">9</button>
 
         <button id ="btn-clear">Clear</button>
 
