--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 <body>
     <main class="calculator">
 
-        <div id ="screen"></div>
+        <div id ="display"></div>
 
-        <div id = "buttons">
+        <div id = "operator-btns">
         <button id ="btn-plus">+</button>
         <button id ="btn-minus">-</button>
         <button id ="btn-multiply">x</button>
         <button id ="btn-divide">÷</button>
         <button id ="btn-equals">=</button>
-        <br>
-
+        </div>
+         <br>
+        <div id = "num-btns">
         <button class="num-btn" data-num="0">0</button>
         <button class="num-btn" data-num="1">1</button>
         <button class="num-btn" data-num="2">2</button>
@@ -29,6 +30,7 @@
         <button class="num-btn" data-num="7">7</button>
         <button class="num-btn" data-num="8">8</button>
         <button class="num-btn" data-num="9">9</button>
+        </div>
 
         <button id ="btn-clear">Clear</button>
 
