FIX added functionality for clearing buttons, and additional tasks

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <button id ="btn-multiply">x</button>
         <button id ="btn-divide">÷</button>
         <button id ="btn-equals">=</button>
+        <button id ="btn-period">.</button>
+        <button id ="btn-backspace">←</button>
+        <button id ="btn-clear">Clear</button>
         </div>
          <br>
         <div id = "num-btns">
@@ -32,7 +35,7 @@
         <button class="num-btn" data-num="9">9</button>
         </div>
 
-        <button id ="btn-clear">Clear</button>
+        
 
         <script src="script.js"></script>
     </main>
