FIX full calculator functionality finalised

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main class="calculator">
 
-        <div id ="display"></div>
+        <div id ="display-top"></div>
 
         <div id = "operator-btns">
         <button id ="btn-plus">+</button>
@@ -34,8 +34,6 @@
         <button class="num-btn" data-num="8">8</button>
         <button class="num-btn" data-num="9">9</button>
         </div>
-
-        
 
         <script src="script.js"></script>
     </main>
